overflow and animations fixed

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -89,9 +89,11 @@
     }
 
     .container {
-        padding  : 0px 3%;
-        margin   : 0px 3%;
-        max-width: 90%;
+        padding      : 0px 3%;
+        margin       : 0px 3%;
+        max-width    : 90%;
+        /* overflow-x: hidden;
+        overflow-y   : visible; */
     }
 }
 
@@ -154,9 +156,11 @@
     }
 
     .container {
-        padding  : 0px 0px;
-        margin   : 0px 5%;
-        max-width: 90%;
+        padding      : 0px 0px;
+        margin       : 0px 5%;
+        max-width    : 90%;
+        /* overflow-x: hidden;
+        overflow-y   : visible; */
     }
 }
 
@@ -447,9 +451,7 @@ body {
 }
 
 html,
-body,
-.container,
-.section {
+body {
     overflow: hidden;
 }
 
